<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main">

    <!-- Top ConstraintLayout with background image -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/blue_fonce">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/wavehaikei1"
            android:layout_marginTop="-100dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Logo/Image on top -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_school_24"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true" />

    <!-- Title below the logo -->
    <TextView
        android:id="@+id/transactionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title_guide"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <!-- Thin grey line separator -->
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/transactionTextView"
        android:layout_marginTop="50dp"
        android:background="@android:color/white" />

    <!-- ScrollView to wrap ListView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/separator"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white">

        <!-- LinearLayout for blocks -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <!-- Block 1 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_bg"
                android:padding="16dp">

                <TextView
                    android:id="@+id/block_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block_title_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/block_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/block_title_1"
                    android:layout_marginTop="8dp"
                    android:text="@string/block_text_1" />

                <CheckBox
                    android:id="@+id/block_checkbox_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text=" " />
            </RelativeLayout>

            <!-- Block 2 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_bg"
                android:padding="16dp">

                <TextView
                    android:id="@+id/block_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block_title_2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/block_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/block_title_2"
                    android:layout_marginTop="8dp"
                    android:text="@string/block_text_2" />

                <CheckBox
                    android:id="@+id/block_checkbox_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text=" " />
            </RelativeLayout>

            <!-- Block 3 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_bg"
                android:padding="16dp">

                <TextView
                    android:id="@+id/block_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block_title_3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/block_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/block_title_3"
                    android:layout_marginTop="8dp"
                    android:text="@string/block_text_3" />

                <CheckBox
                    android:id="@+id/block_checkbox_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text=" " />
            </RelativeLayout>

            <!-- Block 4 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_bg"
                android:padding="16dp">

                <TextView
                    android:id="@+id/block_title_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block_title_4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/block_text_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/block_title_4"
                    android:layout_marginTop="8dp"
                    android:text="@string/block_text_4" />

                <CheckBox
                    android:id="@+id/block_checkbox_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text=" " />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_nav_background"
        android:elevation="30dp"
        app:menu="@menu/bottom_nav"
        app:itemIconTint="@color/light_gray"
        app:itemTextColor="@color/light_gray"
        app:labelVisibilityMode="labeled"
        android:layout_alignParentBottom="true" />

    <!-- Confirm Button positioned above the Bottom Navigation View -->
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_fonce"
        android:text="@string/confirm_button_text"
        android:textColor="@color/white"/>
</RelativeLayout>
